♻️ refactor(server): 将全栈外键字段从 String 统一为 UUID 类型